# ORigin-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE.txt  LinuxGen.sh  Makefile  OR1.sln.DotSettings  OR1.sln.licenseheader  OR1.sln.startup.json  WinGen.bat  WinGenerate.bat  build_sln.bat  gen.bat  gen.sh  git_submodule_update.bat  readme.md  run_editor.sh
Engine/Editor/: CMakeLists.txt  Editor.cfg  imgui.ini  premake5.lua  resource.h  vscode_runner.bat
Engine/Editor/Resources/Models/: base_character.glb  checker_plane.glb  cube_plane.glb
Engine/Editor/Resources/Sandbox/: Shader.glsl
Engine/Editor/Resources/ScriptProjectGen/: build.bat  build.sh  premake_template.lua
Engine/Editor/Resources/Shaders/: CascadedDepthMap.glsl  DepthMapDebug.glsl  InfiniteGrid.glsl  Lighting.glsl  Outline.glsl  Reflection.glsl  ShadowMap.glsl  Skinning.glsl  Skybox.glsl  TestShader.glsl  pbr.glsl
Engine/Editor/SandboxGame/: AssetRegistry  TestGame.csproj  TestGame.oxproj  premake5.lua
Engine/Editor/TestGame/: AssetRegistry  TestGame.csproj  TestGame.oxproj  build.bat  premake5.lua
Engine/Editor/sources/: Dockspace.cpp  Dockspace.hpp  EditorApp.cpp  EditorApp.hpp  EditorLayer.cpp  EditorLayer.h  EditorLayer.hpp  EditorManager.cpp  EditorManager.h  Gizmos.cpp  Gizmos.hpp  ProjectBrowser.cpp  ProjectBrowser.hpp  Themes.cpp  Themes.h  Themes.hpp
Engine/Editor/sources/Gizmos/: Gizmos.cpp  Gizmos.hpp
Engine/Editor/sources/Panels/: AnimationTimeline.cpp  AnimationTimeline.hpp  AudioSystemPanel.cpp  AudioSystemPanel.h  AudioSystemPanel.hpp  BlendSpacePanel.cpp  BlendSpacePanel.hpp  ContentBrowserPanel.cpp  ContentBrowserPanel.h  ContentBrowserPanel.hpp  Dockspace.cpp  MaterialEditor.cpp  MaterialEditorPanel.cpp  MaterialEditorPanel.h  MaterialEditorPanel.hpp  PanelBase.h  PanelBase.hpp  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  SceneHierarchyPanel.hpp  SpriteSheetEditor.cpp  SpriteSheetEditorPanel.cpp  SpriteSheetEditorPanel.h  SpriteSheetEditorPanel.hpp  ThumbnailCache.cpp  ThumbnailCache.h  ThumbnailCache.hpp  UIEditor.cpp  UIEditor.h  UIEditorPanel.cpp  UIEditorPanel.h  UIEditorPanel.hpp
Engine/Editor/sources/Serializer/: EditorSerializer.cpp  EditorSerializer.hpp
Engine/ORigin/: CMakeLists.txt  premake5.lua
Engine/ORigin/sources/: Origin.h  Origin.hpp
Engine/ORigin/sources/Origin/: EntryPoint.h
Engine/ORigin/sources/Platform/: Win32Window.cpp  Win32Window.h
Engine/Runtime/: CMakeLists.txt  Runtime.aps  premake5.lua  resource.h
Engine/Runtime/sources/: RuntimeApp.cpp  RuntimeLayer.cpp  RuntimeLayer.h
Engine/Sandbox/: CMakeLists.txt  premake5.lua  vscode_runner.bat
Engine/Sandbox/sources/: Dockspace.hpp  SM.cpp  SM.hpp  SandboxApp.cpp  SandboxLayer.cpp  SandboxLayer.h  SkinnedMesh.cpp  SkinnedMesh.hpp  m.h
Engine/Test/: CMakeLists.txt  premake5.lua
Engine/Test/AudioTest/: CMakeLists.txt  premake5.lua
Engine/Test/AudioTest/sources/: main.cpp
Engine/Test/MeshTest/: CMakeLists.txt  premake5.lua
Engine/Test/MeshTest/data/: untitled.glb
Engine/Test/MeshTest/sources/: main.cpp
Engine/Test/data/: barbarian.glb
Engine/Test/sources/: main.cpp
ORigin-Editor/: CMakeLists.txt  Editor.aps  Editor.cfg  Editor.cmake  Editor.rc  Makefile  ORigin-Editor.aps  ORigin-Editor.rc  WinGen.bat  imgui.ini  premake5.lua  resource.h  vscode_runner.bat
ORigin-Editor/Resources/: resource.h
ORigin-Editor/Resources/Sandbox/: DefaultMesh.glsl  HDRscreen.glsl  Light.glsl  PointLightDepthMap.glsl  shader.glsl
ORigin-Editor/Resources/ScriptProjectGen/: build.bat  premake_template.lua
ORigin-Editor/Resources/Shaders/: AnimatedMesh.glsl  Circle2D.glsl  Cube.glsl  Default2D.glsl  DepthMap.glsl  DirLightDepthMap.glsl  Line2D.glsl  Mesh.glsl  Mesh2.glsl  MeshSpirv.glsl  MeshTest.glsl  Model.glsl  PointLightDepthMap.glsl  Quad2D.glsl  Screen.glsl  ShadowMap.glsl  Skybox.glsl  TextRenderer.glsl
ORigin-Editor/SandboxGame/: AssetRegistry
ORigin-Editor/SandboxProject/: AssetRegistry  Sandbox.oxproj  SandboxProject.oxproj  WinGen.bat  premake5.lua
ORigin-Editor/SandboxProject/Assets/: AssetRegistry.oxr
ORigin-Editor/SandboxProject/sources/: Camera.cs  Player.cs
ORigin-Editor/assets/scenes/: 2D_Example.org  2D_Example2.org  3D scene.org  3D_Example.org  3D_Example2.org  Example.org  Example2.org  another new scene.org  another scene.org  flappy bird.org  imgui.ini  new scene.org  new.org  scene.org  terrain.org  test.org  test2.org  transparent test.org
ORigin-Editor/assets/shaders/: Circle2D.glsl  Cube.glsl  Default2D.glsl  Default3DQuad.glsl  DefaultShader.glsl  Lighting.glsl  Line2D.glsl  Skybox.glsl  grid.glsl
ORigin-Editor/sources/: Build.cpp  Editor.cpp  Editor.h  EditorApp.cpp  EditorLayer.cpp  EditorLayer.h  GUIData.h  GUIRender.cpp  GameViewport.cpp  InputHandler.cpp  Mario.cpp  Mario.h  SceneViewport.cpp
ORigin-Editor/sources/Gizmos/: Gizmos.cpp  Gizmos.h  Grid.cpp  Grid.h
ORigin-Editor/sources/Panels/: AnimationTimeline.cpp  AnimationTimeline.h  ContentBrowserPanel.cpp  ContentBrowserPanel.h  Dockspace.cpp  Dockspace.h  MaterialEditor.cpp  MaterialEditor.h  ModelLoaderPanel.cpp  ModelLoaderPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  SpriteSheetEditor.cpp  SpriteSheetEditor.h  ThumbnailCache.cpp  ThumbnailCache.h  UIEditor.cpp  UIEditor.h
ORigin-Editor/sources/Serializer/: EditorSerializer.cpp  EditorSerializer.h
ORigin-Editor/sources/panels/: ContentBrowserPanel.cpp  ContentBrowserPanel.h  Dockspace.cpp  Dockspace.h  EditorTheme.cpp  EditorTheme.h  IconFontAwesome.h  MenuBar.cpp  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
Sandbox/: CMakeLists.txt  Makefile  Sandbox.cmake  vscode_runner.bat
Sandbox/assets/shaders/: TexturedShader.glsl
Sandbox/sources/: Draw.cpp  Draw.h  FPSCamera.cpp  FPSCamera.h  Frustum.cpp  Frustum.h  HDRScreen.cpp  HDRScreen.h  Lighting.cpp  Lighting.h  MeshRenderer.cpp  MeshRenderer.h  MeshVertexData.h  Model.h  ModelLoader.cpp  ModelLoader.h  Sandbox.cpp  Sandbox.h  Sandbox3D.cpp  Sandbox3D.h  SandboxApp.cpp  SandboxLayer.cpp  SandboxLayer.h  ShaderLibs.h
(+916 files in other folders)
